RESOLVED FIXED242575
ASSERTION FAILED: !RunLoop::isMain() in WebKit::ThreadedCompositor::targetRefreshRateDidChange
https://bugs.webkit.org/show_bug.cgi?id=242575
Summary ASSERTION FAILED: !RunLoop::isMain() in WebKit::ThreadedCompositor::targetRef...
James Hilliard
Reported 2022-07-10 08:11:28 PDT
I'm seeing this assert get hit when running in valgrind. Page 0x3741acf0 renderingUpdateCompleted() - steps [] unfulfilled steps [] [-> UI 17 receiver 0x2012c910] WebProcessProxy_StopResponsivenessTimer [-> UI 17 receiver 0x3c1c3110] WebPageProxy_DidChangeContentSize (newSize width=1280 height=673) RenderLayerCompositor 0x374f47f0 rootBackgroundColorOrTransparencyChanged. isTransparent=0 RenderLayer 0x37b30bf0 backgroundClipRect with context (root layer: 0x374f5a00) (type: painting) (overflow-clip: respect) returning rect infinite RenderLayer 0x37b30bf0 backgroundClipRect with context (root layer: 0x374f5a00) (type: painting) (overflow-clip: respect) returning rect infinite [-> UI 17 receiver 0x3c1c3110] WebPageProxy_SetRenderTreeSize (treeSize 3) RenderLayer 0x37b30bf0 backgroundClipRect with context (root layer: 0x374f5a00) (type: painting) (overflow-clip: respect) returning rect infinite RenderLayer 0x37b30bf0 backgroundClipRect with context (root layer: 0x374f5a00) (type: painting) (overflow-clip: respect) returning rect infinite RenderLayer 0x37b30bf0 backgroundClipRect with context (root layer: 0x374f5a00) (type: painting) (overflow-clip: respect) returning rect infinite RenderLayer 0x37b30bf0 backgroundClipRect with context (root layer: 0x374f5a00) (type: painting) (overflow-clip: respect) returning rect infinite [-> Web 74 receiver 0x374e6460] DrawingArea_TargetRefreshRateDidChange (rate 60000) ASSERTION FAILED: !RunLoop::isMain() /app/webkit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp(315) : void WebKit::ThreadedCompositor::targetRefreshRateDidChange(unsigned int) [-> UI 17 receiver 0x3c1c3110] WebPageProxy_DidUpdateRenderingAfterCommittingLoad [-> UI 17 receiver 0x1fc3b140] DrawingAreaProxy_DidUpdateBackingStoreState (backingStoreStateID 1) (updateInfo ...) (context ...) 1 0x10f16c53 WTFCrash 2 0xd923126 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x90d0126) [0xd923126] 3 0xe6ab387 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9e58387) [0xe6ab387] 4 0xef909fd /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xa73d9fd) [0xef909fd] 5 0xef8e48f /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xa73b48f) [0xef8e48f] 6 0xdf7b62f /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x972862f) [0xdf7b62f] 7 0xdf7b078 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9728078) [0xdf7b078] 8 0xdf7aded /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9727ded) [0xdf7aded] 9 0xdf7a992 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9727992) [0xdf7a992] 10 0xe57c05a /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9d2905a) [0xe57c05a] 11 0xec3f06d /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xa3ec06d) [0xec3f06d] 12 0xe5537a6 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9d007a6) [0xe5537a6] 13 0xe553a3d /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9d00a3d) [0xe553a3d] 14 0xe553fe4 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9d00fe4) [0xe553fe4] 15 0xe5534b6 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9d004b6) [0xe5534b6] 16 0xe55a59a /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x9d0759a) [0xe55a59a] 17 0xd99e63d /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0x914b63d) [0xd99e63d] 18 0x10f6d6a3 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xc71a6a3) [0x10f6d6a3] 19 0x11018c48 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xc7c5c48) [0x11018c48] 20 0x11018c6c /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xc7c5c6c) [0x11018c6c] 21 0x11018bdb /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xc7c5bdb) [0x11018bdb] 22 0x11018c29 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xc7c5c29) [0x11018c29] 23 0x15f52294 g_main_context_dispatch 24 0x15f52638 /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0(+0x58638) [0x15f52638] 25 0x15f52943 g_main_loop_run 26 0x11019294 WTF::RunLoop::run() 27 0xefb8659 /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xa765659) [0xefb8659] 28 0xefb5d0b /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0(+0xa762d0b) [0xefb5d0b] 29 0xefb2263 WebKit::WebProcessMain(int, char**) 30 0x109909 /app/webkit/WebKitBuild/Debug/bin/WPEWebProcess(+0x1909) [0x109909] 31 0x1661bbc0 __libc_start_main ==74== Invalid write of size 4 ==74== at 0x10F16C58: WTFCrash (Assertions.cpp:328) ==74== by 0xD923125: WTFCrashWithInfo(int, char const*, char const*, int) (Assertions.h:754) ==74== by 0xE6AB386: WebKit::ThreadedCompositor::targetRefreshRateDidChange(unsigned int) (ThreadedCompositor.cpp:315) ==74== by 0xEF909FC: WebKit::LayerTreeHost::targetRefreshRateDidChange(unsigned int) (LayerTreeHost.cpp:254) ==74== by 0xEF8E48E: WebKit::DrawingAreaCoordinatedGraphics::targetRefreshRateDidChange(unsigned int) (DrawingAreaCoordinatedGraphics.cpp:469) ==74== by 0xDF7B62E: void IPC::callMemberFunctionImpl<WebKit::DrawingArea, void (WebKit::DrawingArea::*)(unsigned int), std::tuple<unsigned int>, 0ul>(WebKit::DrawingArea*, void (WebKit::DrawingArea::*)(unsigned int), std::tuple<unsigned int>&&, std::integer_sequence<unsigned long, 0ul>) (HandleMessage.h:131) ==74== by 0xDF7B077: void IPC::callMemberFunction<WebKit::DrawingArea, void (WebKit::DrawingArea::*)(unsigned int), std::tuple<unsigned int>, std::integer_sequence<unsigned long, 0ul> >(std::tuple<unsigned int>&&, WebKit::DrawingArea*, void (WebKit::DrawingArea::*)(unsigned int)) (HandleMessage.h:137) ==74== by 0xDF7ADEC: void IPC::handleMessage<Messages::DrawingArea::TargetRefreshRateDidChange, WebKit::DrawingArea, void (WebKit::DrawingArea::*)(unsigned int)>(IPC::Connection&, IPC::Decoder&, WebKit::DrawingArea*, void (WebKit::DrawingArea::*)(unsigned int)) (HandleMessage.h:259) ==74== by 0xDF7A991: WebKit::DrawingArea::didReceiveMessage(IPC::Connection&, IPC::Decoder&) (DrawingAreaMessageReceiver.cpp:79) ==74== by 0xE57C059: IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) (MessageReceiverMap.cpp:129) ==74== by 0xEC3F06C: WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) (WebProcess.cpp:912) ==74== by 0xE5537A5: IPC::Connection::dispatchMessage(IPC::Decoder&) (Connection.cpp:1108) ==74== by 0xE553A3C: IPC::Connection::dispatchMessage(std::unique_ptr<IPC::Decoder, std::default_delete<IPC::Decoder> >) (Connection.cpp:1153) ==74== by 0xE553FE3: IPC::Connection::dispatchOneIncomingMessage() (Connection.cpp:1222) ==74== by 0xE5534B5: IPC::Connection::enqueueIncomingMessage(std::unique_ptr<IPC::Decoder, std::default_delete<IPC::Decoder> >)::{lambda()#1}::operator()() (Connection.cpp:1072) ==74== by 0xE55A599: WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::unique_ptr<IPC::Decoder, std::default_delete<IPC::Decoder> >)::{lambda()#1}, void>::call() (Function.h:53) ==74== by 0xD99E63C: WTF::Function<void ()>::operator()() const (Function.h:82) ==74== by 0x10F6D6A2: WTF::RunLoop::performWork() (RunLoop.cpp:133) ==74== by 0x11018C47: WTF::RunLoop::RunLoop()::{lambda(void*)#1}::operator()(void*) const (RunLoopGLib.cpp:80) ==74== by 0x11018C6B: WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) (RunLoopGLib.cpp:82) ==74== by 0x11018BDA: WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::operator()(_GSource*, int (*)(void*), void*) const (RunLoopGLib.cpp:53) ==74== by 0x11018C28: WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) (RunLoopGLib.cpp:56) ==74== by 0x15F52293: g_main_dispatch (gmain.c:3381) ==74== by 0x15F52293: g_main_context_dispatch (gmain.c:4099) ==74== by 0x15F52637: g_main_context_iterate.constprop.0 (gmain.c:4175) ==74== by 0x15F52942: g_main_loop_run (gmain.c:4373) ==74== by 0x11019293: WTF::RunLoop::run() (RunLoopGLib.cpp:108) ==74== by 0xEFB8658: WebKit::AuxiliaryProcessMainBase<WebKit::WebProcess, true>::run(int, char**) (AuxiliaryProcessMain.h:70) ==74== by 0xEFB5D0A: int WebKit::AuxiliaryProcessMain<WebKit::WebProcessMainWPE>(int, char**) (AuxiliaryProcessMain.h:96) ==74== by 0xEFB2262: WebKit::WebProcessMain(int, char**) (WebProcessMainWPE.cpp:75) ==74== by 0x109908: main (WebProcessMain.cpp:31) ==74== Address 0xbbadbeef is not stack'd, malloc'd or (recently) free'd ==74==
Attachments
James Hilliard
Comment 1 2022-07-10 08:18:34 PDT
Víctor M. Jáquez L.
Comment 2 2022-07-13 08:59:31 PDT
Radar WebKit Bug Importer
Comment 3 2022-07-17 08:12:15 PDT
Vitaly Dyackhov
Comment 4 2022-09-09 09:32:19 PDT
Philippe Normand
Comment 5 2022-09-13 02:49:40 PDT
*** Bug 245125 has been marked as a duplicate of this bug. ***
EWS
Comment 6 2022-09-13 03:33:52 PDT
Committed 254427@main (e8982cd00674): <https://commits.webkit.org/254427@main> Reviewed commits have been landed. Closing PR #4174 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.