WebKit::ThreadedCompositor::targetRefreshRateDidChange don't refresh unless !RunLoop::isMain() https://bugs.webkit.org/show_bug.cgi?id=242575

Reviewed by NOBODY (OOPS!).

Appears to fix:
[-> Web 74 receiver 0x374e6460] DrawingArea_TargetRefreshRateDidChange (rate 60000)
ASSERTION FAILED: !RunLoop::isMain()
/app/webkit/Source/WebKit/Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp(315) : void WebKit::ThreadedCompositor::targetRefreshRateDidChange(unsigned int)
[-> UI 17 receiver 0x3c1c3110] WebPageProxy_DidUpdateRenderingAfterCommittingLoad
[-> UI 17 receiver 0x1fc3b140] DrawingAreaProxy_DidUpdateBackingStoreState (backingStoreStateID 1) (updateInfo ...) (context ...)

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::targetRefreshRateDidChange):